# JJPWRGEM

./: .gitmodules  .prettierignore  CHANGELOG.md  Cargo.toml  Dockerfile  axolotl.txt  benchmarks.md  development.md  dist-workspace.toml  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  release-plz.toml  states.md  todos.md  tsconfig.json
.github/: dependabot.yml
.github/workflows/: host-npm.yml  npm-release.yml  publish-npm.yml  release-plz.yml  release.yml  verify.yml
crates/cli/: Cargo.toml  commands.rs  error.rs  main.rs  output.rs  readme.md
crates/parse/: Cargo.toml  readme.md
crates/ui/: Cargo.toml  readme.md
npm-packages/jjpwrgem-vscode/: .gitignore  .vscode-test.mjs  CHANGELOG.md  README.md  package.json  tsconfig.json
npm-template/: .gitignore  binary.js  install.js  npm-shrinkwrap.json  run-jjp.js
src/: ast.rs  cli.rs  error.rs  format.rs  lib.rs  main.rs  test_json.rs  tokens.rs
src/ast/: array.rs  object.rs
src/error/: diagnostics.rs
src/snapshots/: jjpwrgem__cli__tests__closed_curly.snap  jjpwrgem__cli__tests__empty_input.snap  jjpwrgem__cli__tests__object_double_open_curly.snap  jjpwrgem__cli__tests__object_empty_then_open.snap  jjpwrgem__cli__tests__object_missing_colon.snap  jjpwrgem__cli__tests__object_missing_colon_with_closed_curly.snap  jjpwrgem__cli__tests__object_missing_colon_with_comma.snap  jjpwrgem__cli__tests__object_missing_colon_with_leading_whitespace.snap  jjpwrgem__cli__tests__object_missing_colon_with_null.snap  jjpwrgem__cli__tests__object_missing_comma_between_values.snap  jjpwrgem__cli__tests__object_missing_comma_or_closing_with_whitespace.snap  jjpwrgem__cli__tests__object_missing_value.snap  jjpwrgem__cli__tests__object_open_curly.snap  jjpwrgem__cli__tests__object_trailing_comma.snap  jjpwrgem__cli__tests__object_trailing_comma_with_closed.snap  jjpwrgem__cli__tests__object_with_adjacent_strings.snap  jjpwrgem__cli__tests__object_with_line_break_value.snap  jjpwrgem__cli__tests__unexpected_character.snap  jjpwrgem__cli__tests__unexpected_escaped_character.snap
src/tokens/: lexical.rs  number.rs  string.rs
tests/: conformance.rs  format.rs  parse_failure.rs
tests/integration/: commands.rs  common.rs  conformance.rs  format.rs  format_ast.rs  main.rs  parse_failure.rs  test_json.rs
tests/snapshots/: conformance__i_number_double_huge_neg_exp.json.snap  conformance__i_number_huge_exp.json.snap  conformance__i_number_neg_int_huge_exp.json.snap  conformance__i_number_pos_double_huge_exp.json.snap  conformance__i_number_real_neg_overflow.json.snap  conformance__i_number_real_pos_overflow.json.snap  conformance__i_number_real_underflow.json.snap  conformance__i_number_too_big_neg_int.json.snap  conformance__i_number_too_big_pos_int.json.snap  conformance__i_number_very_big_negative_int.json.snap  conformance__i_object_key_lone_2nd_surrogate.json.snap  conformance__i_string_1st_surrogate_but_2nd_missing.json.snap  conformance__i_string_1st_valid_surrogate_2nd_invalid.json.snap  conformance__i_string_incomplete_surrogate_and_escape_valid.json.snap  conformance__i_string_incomplete_surrogate_pair.json.snap  conformance__i_string_incomplete_surrogates_escape_valid.json.snap  conformance__i_string_invalid_lonely_surrogate.json.snap  conformance__i_string_invalid_surrogate.json.snap  conformance__i_string_invalid_utf-8.json.snap  conformance__i_string_inverted_surrogates_u+1d11e.json.snap  conformance__i_string_iso_latin_1.json.snap  conformance__i_string_lone_second_surrogate.json.snap  conformance__i_string_lone_utf8_continuation_byte.json.snap  conformance__i_string_not_in_unicode_range.json.snap  conformance__i_string_overlong_sequence_2_bytes.json.snap  conformance__i_string_overlong_sequence_6_bytes.json.snap  conformance__i_string_overlong_sequence_6_bytes_null.json.snap  (+330 more)
xtask/: Cargo.toml
xtask/assets/fonts/: liberation_sans_narrow_regular.ttf.base64
xtask/bench/: benchmark.sh  dprint.json  mise.toml
xtask/bench/output/: pretty-canada.json  pretty-canada.md  pretty-citm_catalog.json  pretty-citm_catalog.md  pretty-twitter.json  pretty-twitter.md  ugly-canada.json  ugly-canada.md  ugly-citm_catalog.json  ugly-citm_catalog.md  ugly-twitter.json  ugly-twitter.md
xtask/src/: main.rs  npm.rs  plot.rs  template.rs
xtask/src/npm/: metadata.rs
xtask/templates/: bench.template.md  indeterminate_handling.md  parse.template.md  root.template.md
(+1165 files in other folders)
