[package]
name = "jjpwrgem"
description = "jjpwrgem json parser with really good error messages"
version = "0.1.4"
edition = "2024"
authors = ["Jacob Asper <jacobasper191@gmail.com>"]
keywords = ["parser", "formatter", "json", "linter"]
categories = ["command-line-utilities", "text-processing", "encoding"]
homepage = "https://github.com/20jasper/jjpwrgem"
repository = "https://github.com/20jasper/jjpwrgem"

[[bin]]
name = "jjp"
path = "crates/cli/src/main.rs"

[[test]]
name = "integration"
path = "tests/integration/main.rs"


[workspace]
members = ["crates/cli", "crates/ui", "crates/parse"]

[workspace.dependencies]
anstream = "0.6.21"
jjpwrgem-parse = { path = "crates/parse" }
jjpwrgem-ui = { path = "crates/ui" }

[dependencies]
anstream = "0.6.21"
cli = { path = "crates/cli" }
jjpwrgem-parse = { path = "crates/parse" }
jjpwrgem-ui = { path = "crates/ui" }

[dev-dependencies]
insta = "1.44.1"
rstest = "0.26.1"
rstest_reuse = "0.7.0"


[profile.release]
opt-level = 3

[lints.clippy]
[lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
