[package]
name = "jjpwrgem"
description = "jjpwrgem json parser with really good error messages"
version = "0.4.0"
edition = "2024"
authors = ["Jacob Asper <jacobasper191@gmail.com>"]
keywords = ["parser", "formatter", "json", "linter"]
categories = ["command-line-utilities", "text-processing", "encoding"]
homepage = "https://github.com/20jasper/jjpwrgem"
repository = "https://github.com/20jasper/jjpwrgem"
license = "MIT"
readme = "readme.md"
include = ["readme.md", "CHANGELOG.md", "crates/cli/**/*.rs"]

[[bin]]
name = "jjp"
path = "crates/cli/main.rs"

[[test]]
name = "integration"
path = "tests/integration/main.rs"


[workspace]
members = ["crates/ui", "crates/parse", "xtask"]

[workspace.dependencies]
anstream = "0.6.21"
jjpwrgem-parse = { path = "crates/parse", version = "0.1.0" }
jjpwrgem-ui = { path = "crates/ui", version = "0.2.0" }

[dependencies]
anstream = "0.6.21"
clap = { version = "4.5.53", features = ["derive"] }
displaydoc = "0.2.5"
jjpwrgem-parse = { path = "crates/parse", version = "0.1.0" }
jjpwrgem-ui = { path = "crates/ui", version = "0.2.0" }
thiserror = "2.0.17"

[dev-dependencies]
insta = "1.44.3"
rstest = "0.26.1"
rstest_reuse = "0.7.0"


[profile.release]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.clippy]
[lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
