[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
plotters = { version = "0.3", default-features = false, features = [
  "bitmap_backend",
  "bitmap_encoder",
  "candlestick",
  "ab_glyph",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
