[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { workspace = true }
jjpwrgem-parse = { workspace = true }
plotters = { version = "0.3", default-features = false, features = [
  "bitmap_backend",
  "bitmap_encoder",
  "candlestick",
  "ab_glyph",
] }
